--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "^0.46.4",
     "react-native-background-timer": "^1.2.0",
     "react-native-device-info": "^0.12.1",
+    "react-native-document-picker": "^2.1.0",
     "react-native-fbsdk": "^0.6.0",
     "react-native-google-signin": "^0.10.0",
     "react-native-htmlview": "^0.12.0",
