--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "parse": "^1.9.2",
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.4",
+    "react": "16.0.0",
+    "react-native": "^0.50.3",
     "react-native-background-timer": "^1.2.0",
     "react-native-device-info": "^0.12.1",
     "react-native-fbsdk": "^0.6.0",
@@ -46,7 +46,7 @@
     "react-native-vector-icons": "^4.2.0",
     "react-native-webview-bridge-updated": "^1.0.8",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#19cf5e8b",
-    "react-navigation": "^1.0.0-beta.11",
+    "react-navigation": "^1.0.0-beta.19",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
