--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "^0.50.3",
-    "react-native-background-timer": "^1.2.0",
+    "react-native-background-timer": "^1.3.0",
     "react-native-device-info": "^0.12.1",
     "react-native-fbsdk": "^0.6.3",
-    "react-native-google-signin": "^0.11.0",
+    "react-native-google-signin": "^0.12.0",
     "react-native-htmlview": "^0.12.0",
     "react-native-image-picker": "^0.26.7",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-onesignal": "^3.0.5",
     "react-native-prompt-android": "^0.3.1",
-    "react-native-tab-navigator": "^0.3.3",
+    "react-native-tab-navigator": "^0.3.4",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^4.4.2",
-    "react-native-webview-bridge-updated": "^1.0.8",
+    "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e8",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#6cb3038e",
     "react-navigation": "^1.0.0-beta.19",
-    "react-redux": "^5.0.5",
-    "redux": "^3.6.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-orm": "Hylozoic/redux-orm#model-createClass-dist",
     "redux-promise": "^0.5.3",
