DEV-137 Upgrade react native to v0.50.3 (#150)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,10 @@ import com.android.build.OutputFile
  * ]
  */
 
+project.ext.react = [
+    entryFile: "index.js"
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
@@ -185,9 +189,9 @@ dependencies {
 
     // then we re-require the libraries that are needed, but with a precise
     // version requirement
-    compile 'com.google.android.gms:play-services-auth:10.2.1'
-    compile 'com.google.android.gms:play-services-gcm:10.2.1'
-    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'com.google.android.gms:play-services-gcm:11.0.4'
+    compile 'com.google.android.gms:play-services-location:11.0.4'
 }
 
 // Run this once to be able to run the application with BUCK
