--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ios": "react-native run-ios",
     "ios:testflight": "cd ios && bundle exec fastlane beta",
     "test": "jest",
-    "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html"
+    "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html",
+    "clean-start": "./scripts/clean-rebuild.sh"
   },
   "dependencies": {
     "babel-eslint": "^8.0.1",
@@ -28,28 +29,27 @@
     "lodash": "^4.17.4",
     "parse": "^1.9.2",
     "path-to-regexp": "^2.0.0",
-    "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.4",
-    "react-native-background-timer": "^1.2.0",
+    "prop-types": "^15.6.0",
+    "react": "16.0.0",
+    "react-native": "^0.50.3",
+    "react-native-background-timer": "^1.3.0",
     "react-native-device-info": "^0.12.1",
     "react-native-document-picker": "^2.1.0",
-    "react-native-fbsdk": "^0.6.0",
-    "react-native-google-signin": "^0.10.0",
+    "react-native-fbsdk": "^0.6.3",
+    "react-native-google-signin": "^0.12.0",
     "react-native-htmlview": "^0.12.0",
-    "react-native-image-picker": "^0.26.3",
+    "react-native-image-picker": "^0.26.7",
     "react-native-linear-gradient": "^2.3.0",
-    "react-native-onesignal": "^3.0.5",
-    "react-native-prompt": "^1.0.0",
+    "react-native-onesignal": "^3.0.7",
     "react-native-prompt-android": "^0.3.1",
-    "react-native-tab-navigator": "^0.3.3",
+    "react-native-tab-navigator": "^0.3.4",
     "react-native-triangle": "^0.0.9",
-    "react-native-vector-icons": "^4.2.0",
-    "react-native-webview-bridge-updated": "^1.0.8",
-    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#a3ff2ed5",
-    "react-navigation": "^1.0.0-beta.11",
-    "react-redux": "^5.0.5",
-    "redux": "^3.6.0",
+    "react-native-vector-icons": "^4.4.2",
+    "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e8",
+    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#6cb3038e",
+    "react-navigation": "^1.0.0-beta.19",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-orm": "Hylozoic/redux-orm#model-createClass-dist",
     "redux-promise": "^0.5.3",
@@ -68,32 +68,6 @@
     "remote-redux-devtools": "^0.5.11",
     "timezone-mock": "^0.0.6",
     "validator": "^8.0.0"
-  },
-  "babel": {
-    "presets": [
-      "react-native"
-    ],
-    "plugins": [
-      [
-        "inline-dotenv",
-        {
-          "silent": true
-        }
-      ],
-      "transform-inline-environment-variables"
-    ],
-    "env": {
-      "test": {
-        "plugins": [
-          "remove-style"
-        ]
-      },
-      "production": {
-        "plugins": [
-          "transform-remove-console"
-        ]
-      }
-    }
   },
   "jest": {
     "preset": "react-native",
