--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ios:testflight": "cd ios && bundle exec fastlane beta",
     "test": "jest",
     "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html",
-    "clean-start": "./scripts/clean-rebuild.sh"
+    "clean-start": "./scripts/clean-rebuild.sh",
+    "configure": "./scripts/configure.sh"
   },
   "dependencies": {
     "babel-eslint": "^8.0.1",
