add error boundary to root container with simple UI

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,6 +161,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-restart')
     compile project(':react-native-document-picker')
     compile project(':react-native-prompt-android')
     compile project(':react-native-linear-gradient')
