--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-linear-gradient": "^2.3.0",
     "react-native-onesignal": "^3.0.7",
     "react-native-prompt-android": "^0.3.1",
+    "react-native-restart": "^0.0.4",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^4.4.2",
