--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hylo-utils": "Hylozoic/hylo-utils#716622b5",
     "lodash": "^4.17.4",
     "parse": "^1.9.2",
+    "path-match": "^1.2.4",
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
