MBL-272: Only render focused screens (#139)
* react-navigation-isfocused-hoc

* Suppress log output during testing

* Check isFocused in connectors

* Add jest-simple-reporter

* Update tests

* Docs

* Coverage

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e8",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#6cb3038e",
     "react-navigation": "^1.0.0-beta.19",
+    "react-navigation-is-focused-hoc": "patlux/react-navigation-is-focused-hoc",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -64,6 +65,7 @@
     "babel-plugin-remove-style": "^0.1.0",
     "babel-preset-react-native": "^1.9.2",
     "jest": "^20.0.4",
+    "jest-simple-reporter": "^0.1.0",
     "react-test-renderer": "next",
     "remote-redux-devtools": "^0.5.11",
     "timezone-mock": "^0.0.6",
