handle updateFocus correctly during deep-linking
MBL-317

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e8",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#6cb3038e",
     "react-navigation": "^1.0.0-beta.19",
-    "react-navigation-is-focused-hoc": "patlux/react-navigation-is-focused-hoc",
+    "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
