--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest",
     "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html",
     "clean-start": "./scripts/clean-rebuild.sh",
-    "configure": "./scripts/configure.sh"
+    "configure": "./scripts/configure.sh",
+    "postinstall": "rm -f ./node_modules/react-native/local-cli/core/__fixtures__/files/package.json"
   },
   "dependencies": {
     "babel-eslint": "^8.0.1",
@@ -32,8 +33,8 @@
     "path-match": "^1.2.4",
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.6.0",
-    "react": "16.0.0",
-    "react-native": "^0.50.3",
+    "react": "16.2.0",
+    "react-native": "^0.53.0",
     "react-native-background-timer": "^1.3.0",
     "react-native-device-info": "^0.12.1",
     "react-native-document-picker": "^2.1.0",
@@ -70,7 +71,7 @@
     "babel-preset-react-native": "^1.9.2",
     "jest": "^20.0.4",
     "jest-simple-reporter": "^0.1.0",
-    "react-test-renderer": "next",
+    "react-test-renderer": "16.2",
     "remote-redux-devtools": "^0.5.11",
     "timezone-mock": "^0.0.6",
     "validator": "^8.0.0"
